@@ -36,6 +36,7 @@ Changelog
 - Exclusively handle templates on Committee and not on CommitteeContainer anymore. [njohner]
 - Extend @listing endpoint with `tasks`-listing. [elioschmutz]
 - Add option not to revoke permissions associated with a task when closing it. [njohner]
+- Respect the local roles and the inheritance thereof of dossier templates. [Rotonen]
 - Do not list auto-generated documents as recently touched. [njohner]
 - Standardize french and german translation of "attachments" in meetings. [njohner]
 - Do not list resolved tasks as pending in the 'My Tasks' tab. [Rotonen]
